add some structure in the index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <title>Fotostory - Webapp</title>
 </head>
 <body>
-    
+    <header>
+        <logo></logo>
+    </header>
+    <nav>
+        <ul>
+            <li>Link 1</li>
+            <li>Link 2</li>
+            <li>Link 3</li>
+        </ul>
+    </nav>
+    <content>
+        <main>
+            <h1>This is a test!</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, 
+                sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem 
+                ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore 
+                magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata 
+                sanctus est Lorem ipsum dolor sit amet.
+            </p>
+            <canvas></canvas>
+        </main>
+    </content>
+    <footer>
+        <ul>
+            <li>Impressum</li>
+            <li>&copy; 2021 </li>
+        </ul>
+    </footer>
 </body>
 </html>
